# mutatest

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines-vms.yml  azure-pipelines.yml  m4.ipynb  m5.ipynb  m6.ipynb  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  yield_nodes.ipynb
.github/: pull_request_template.md
azure/: azure-linux-macos.yml  azure-windows.yml
docs/: changelog.rst  commandline.rst  conf.py  index.rst  install.rst  license.rst  modules.rst  mutants.rst  requirements.txt
docs/api_tutorial/: api_tutorial.ipynb  api_tutorial.rst  pytest.ini
firstmodule/: run.py  test_run.py
mutatest/: __init__.py  __main__.py  _devtools.py  analyzer.py  api.py  cache.py  cli.py  controller.py  coverage.py  filters.py  genome.py  maker.py  mutatest_plugins.py  optimizers.py  plugin.py  report.py  run.py  transformers.py  wtw.py
mutatest/alpha/: optimizers.py
mutatest/tests/: all_op_types.py  conftest.py  test_all_op_types.py  test_api.py  test_cache.py  test_cli.py  test_filters.py  test_run.py  (+1 more)
mutation/: __init__.py  cache.py  controller.py  maker.py  transformers.py
notebooks/: mutation_report.rst  node_finder.ipynb  testing temp.ipynb
old_notebooks/: m3.ipynb  m5.ipynb  yield_nodes.ipynb
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_controller.py  test_filters.py  test_maker.py  test_optimizers.py  test_report.py  test_run.py  test_transformers.py
(+17 files in other folders)
