[bdist_wheel]
python-tag = py36

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[tool:pytest]
addopts = -ra --cov=mutatest --cov-report=html

[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 10

[isort]
# isort can be run on cli, not included in pre-commit hook
# due to preferential treatment from black on formatting
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true

known_first_party=mutatest
known_third_party=pytest,setuptools
